--- a/style.css
+++ b/style.css
@@ -16,8 +16,7 @@ body {
   overflow: hidden;
   background-color: rgb( 5, 5, 5);
   display: grid;
-  place-items: center;
-}
+  place-items: center;}
 
 .shape {
   box-shadow: 0px 0px 0.5rem 0.1rem rgba(255, 255, 255, 0.048)
@@ -62,27 +61,32 @@ body {
 .time-blur {
   position: absolute;
   z-index: 20;
-  width: 40rem;
-  height: 8rem;
-  background: rgba(255, 255, 255, 0.3);
-  border-radius: 2rem;
-  backdrop-filter: blur(0.2rem);
-  -webkit-backdrop-filter: blur(0.2rem);
-  box-shadow: inset 0px 0px 3rem black;
-  display: none;
+  aspect-ratio: 1.618;
+  width: 80vw;
+  /* background: rgba(255, 255, 255, 0.3); */
+  /* border-radius: 2rem; */
+  backdrop-filter: blur(3rem);
+  -webkit-backdrop-filter: blur(3rem);
+  /* box-shadow: inset 0px 0px 3rem black; */
+  transition: all ease-in-out 1300ms;
+
 }
-#timeDisplay {
+
+.time{
   position: absolute;
-  color: pink;
-  font-size: 6rem;
-  z-index: 20;
+  color: white;
+  font-size: 6.8rem;
+  letter-spacing: -0.62rem;
+  z-index: 22;
+  scale: 1;
   font-family: "Rubik Mono One", monospace;
   font-weight: 300;
   mix-blend-mode: difference;
   transition: letter-spacing 750ms ease-in-out;
 }
 
-#timeDisplay:hover {
+
+.timeDisplay:hover {
   letter-spacing: 1.5rem;
 }
 
